# aether-manager

./: .gitignore  CUPERTINO_IOS_PATCH_NOTES.txt  LEGACY_LICENSE_CODE_SUPPORT.md  PATCH_NOTES_V3.md  R8_AGP_8_13_2_FIX_NOTES.txt  README.md  REMOVE_IOS_MIUI_LEFTOVER_FIX.txt  ZRAM_KERNEL_MANAGER_FIX_NOTES.txt  aether.jks  aether_only_log.txt  build.gradle.kts  gradle.properties  key.txt  keyhash.txt  local.properties  local.properties.template  package.json  settings.gradle.kts  vercel.json
.github/workflows/: build.yml
api/: activate.js  admin.js  verify.js
api/admin/: create.js  delete.js  keys.js  revoke.js  update.js
api/admin/key/: [key].js
api/payment/: confirm-order.js  create-order.js  delete-order.js  list-orders.js  poll-order.js
api/public/key/: [key].js
app/: build.gradle.kts  google-services.json  proguard-dictionary.txt  proguard-rules.pro
app/src/main/: AndroidManifest.xml  baseline-prof.txt
app/src/main/assets/: app-ads.txt
app/src/main/cpp/: CMakeLists.txt  aethersec.cpp  aetherui.cpp  jembut.cpp  libaether.cpp  libcimolagent.cpp
app/src/main/java/com/aether/: AetherApplication.kt  MainActivity.kt  NativeAether.kt  SetupActivity.kt  SplashActivity.kt
app/src/main/java/com/aether/ads/: AdBlockChecker.kt  AdBlockDialog.kt  AdBlockMonitor.kt  AdManager.kt  AdScheduler.kt  InterstitialAdManager.kt
app/src/main/java/com/aether/data/: AppProfile.kt  AppProfileRepository.kt  AppProfileViewModel.kt  MainViewModel.kt
app/src/main/java/com/aether/i18n/: AppStrings.kt  LanguageDropdown.kt  RuntimeUiText.kt  StringsEn.kt  StringsId.kt  StringsProvider.kt
app/src/main/java/com/aether/license/: LicenseManager.kt  LicensePrefs.kt  LicenseViewModel.kt
app/src/main/java/com/aether/lv/: LogLogApplication.kt  MainActivity.kt
app/src/main/java/com/aether/lv/data/db/: LogLogDatabase.kt  RecentFileDao.kt
app/src/main/java/com/aether/lv/data/model/: RecentFile.kt
app/src/main/java/com/aether/lv/data/preferences/: ThemePreferences.kt
app/src/main/java/com/aether/lv/permission/: PermissionManager.kt  PermissionRationaleDialog.kt
app/src/main/java/com/aether/lv/ui/: LogLogApp.kt
app/src/main/java/com/aether/lv/update/: ApkInstaller.kt  UpdateChecker.kt  UpdateDialog.kt  UpdateViewModel.kt
app/src/main/java/com/aether/lv/util/: FileTypeUtil.kt  FormatUtil.kt  GzipUtil.kt  LogLineParser.kt
app/src/main/java/com/aether/notification/: LicenseNotificationChecker.kt  NotificationHelper.kt  NotificationScheduler.kt  UpdateNotificationHelper.kt
app/src/main/java/com/aether/payment/: InvoicePrefs.kt  PaymentManager.kt  PaymentViewModel.kt
app/src/main/java/com/aether/remote/: AetherAdminSync.kt
app/src/main/java/com/aether/security/: AetherSecurityNative.kt  SecurityBlockActivity.kt
app/src/main/java/com/aether/service/: AetherService.kt
app/src/main/java/com/aether/shizuku/: ShizukuShell.kt  ShizukuTweakApplier.kt
app/src/main/java/com/aether/ui/: Theme.kt
app/src/main/java/com/aether/ui/appprofile/: AppProfileScreen.kt
app/src/main/java/com/aether/ui/backup/: BackupScreen.kt
app/src/main/java/com/aether/ui/components/: Components.kt  LogSheet.kt
app/src/main/java/com/aether/ui/home/: HomeScreen.kt
app/src/main/java/com/aether/ui/license/: LicenseScreen.kt
app/src/main/java/com/aether/ui/settings/: SettingsScreen.kt
app/src/main/java/com/aether/ui/tweak/: NoRootTweakScreen.kt  TweakModeScreen.kt  TweakScreen.kt
app/src/main/java/com/aether/update/: UpdateChecker.kt  UpdateDialog.kt  UpdateViewModel.kt
app/src/main/java/com/aether/util/: BackupManager.kt  DeviceInfo.kt  RootEngine.kt  RootManager.kt  SettingsPrefs.kt  TweakApplier.kt  UiNativeBoost.kt  UiPerformanceMonitor.kt
app/src/main/java/dev/aether/manager/: AetherApplication.kt  CimolAgent.kt  MainActivity.kt  NativeAether.kt  SetupActivity.kt  SplashActivity.kt
app/src/main/java/dev/aether/manager/ads/: AdBannerView.kt  AdBlockChecker.kt  AdBlockDialog.kt  AdBlockMonitor.kt  AdManager.kt  AdMobInterstitialManager.kt  AdScheduler.kt  AdmobInterstitialManager.kt  InterstitialAdManager.kt
app/src/main/java/dev/aether/manager/data/: AppProfile.kt  AppProfileRepository.kt  AppProfileViewModel.kt  MainViewModel.kt
app/src/main/java/dev/aether/manager/i18n/: AppStrings.kt  LanguageDropdown.kt  RuntimeUiText.kt  StringsEn.kt  StringsId.kt  StringsProvider.kt  StringsRu.kt  StringsZh.kt
app/src/main/java/dev/aether/manager/license/: LicenseManager.kt  LicensePrefs.kt  LicenseViewModel.kt
app/src/main/java/dev/aether/manager/notification/: INTEGRATION_GUIDE.md  LicenseNotificationChecker.kt  NotificationHelper.kt  NotificationScheduler.kt  UpdateNotificationHelper.kt
app/src/main/java/dev/aether/manager/payment/: InvoicePrefs.kt  PaymentManager.kt  PaymentViewModel.kt
app/src/main/java/dev/aether/manager/security/: AetherSecurityNative.kt  SecurityBlockActivity.kt
app/src/main/java/dev/aether/manager/service/: AetherService.kt
app/src/main/java/dev/aether/manager/shizuku/: ShizukuShell.kt  ShizukuTweakApplier.kt
app/src/main/java/dev/aether/manager/ui/: Theme.kt
app/src/main/java/dev/aether/manager/update/: UpdateChecker.kt  UpdateDialog.kt  UpdateViewModel.kt
app/src/main/java/dev/aether/manager/util/: AetherLog.kt  BackupManager.kt  DeviceInfo.kt  NativeExec.kt  RootEngine.kt  RootManager.kt  RootUtils.kt  SettingsPrefs.kt  TweakApplier.kt  UiNativeBoost.kt  UiPerformanceMonitor.kt
app/src/main/res/drawable/: ic_aether_v3.xml  ic_launcher_foreground_v3.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_foreground.xml  ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: data_extraction_rules.xml  file_provider_paths.xml  network_security_config.xml  update_provider_paths.xml
gradle/: libs.versions.toml
lib/: redis.js
license-admin/: index.html
(+26 files in other folders)
